// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHoverStyle() should return correct css for opts: { borderRadius: '6px' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover": {
      "background": "rgba(148, 149, 152, .18)",
    },
  },
  "borderRadius": "6px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .24s) ease",
}
`;

exports[`getHoverStyle() should return correct css for opts: { borderRadius: 'medium' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover": {
      "background": "rgba(148, 149, 152, .18)",
    },
  },
  "borderRadius": "8px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .24s) ease",
}
`;

exports[`getHoverStyle() should return correct css for opts: { borderRadius: 'small' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover": {
      "background": "rgba(148, 149, 152, .18)",
    },
  },
  "borderRadius": "4px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .24s) ease",
}
`;

exports[`getHoverStyle() should return correct css for opts: { borderRadius: undefined } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover": {
      "background": "rgba(148, 149, 152, .18)",
    },
  },
  "borderRadius": "4px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .24s) ease",
}
`;
